fix titles not showing up on mobile devices

--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -36,6 +36,6 @@ a{
 }
 @media (max-width: 768px){
   .content {
-    padding:5px;
+    padding:20vh 0 10vh;
   }
 }
